# socket.io-client-cpp

./: CMakeLists.txt  package-lock.cmake
include/sioclient/: sio_socket.h
src/: sio_socket.cpp
